@@ -206,7 +206,7 @@ D  "rungs -q -dNOPAUSE -dBATCH -dEPSCrop -sDEVICE=pdfwrite -dCompatibilityLevel=
 
 %% teTeX 2.x and TeX Live using updmap (DVIPS format)
 %% MiKTeX 2.2 and 2.3
-%f psfonts.map
+f psfonts.map
 
 %% Put additional fontmap files here (usually for Type0 fonts)
 f  cid-x.map
