@@ -1,0 +1,8 @@
+%
+\special{pdf:obj @tug <</S/URI /URI (http://www.tug.org)>>}
+
+\special{pdf:bann <</Subtype/Link /A @tug>>}%
+TUG on the web
+\special{pdf:eann}%
+
+\bye
