@@ -1,0 +1,25 @@
+#! /bin/sh
+
+# Copyright (C) 2013 Peter Breitenlohner <tex-live@tug.org>
+# You may freely use, modify and/or distribute this file.
+
+# Not really a test, just making sure the program executes.
+
+TEXMFCNF=${srcdir}/../kpathsea
+TEXFONTS=${srcdir}/tests:${srcdir}/data
+DVIPDFMXINPUTS=${srcdir}/tests:${srcdir}/data
+TEXPICTS=${srcdir}/tests
+export TEXMFCNF TEXFONTS DVIPDFMXINPUTS TEXPICTS
+
+failed=
+
+echo "*** xdvipdfmx -v -o grahn2.pdf grahn" && echo \
+	&& ./xdvipdfmx -v -o grahn2.pdf ${srcdir}/tests/grahn \
+	&& echo && echo "xdvipdfmx-ann tests OK" && echo \
+	|| failed="$failed xdvipdfmx-ann"	
+
+test -z "$failed" && exit 0
+echo
+echo "failed tests:$failed"
+exit 1
+
